--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -900,38 +900,40 @@
 }
 
 @Article{MGVuPe1995,
-  author    = {Paolo Muratore-Ginanneschi and Alberto Petri and Angelo Vulpiani},
-  journal   = {Modern Physics Letters},
-  title     = {{Localization lengths in harmonic chains with correlated disorder}},
-  year      = {1995},
-  abbr      = {Mod. Phys. Lett.},
-  month     = {jun},
-  number    = {15},
-  pages     = {921--928},
-  volume    = {09},
-  abstract  = {We show that the localization properties of harmonic chains with correlated random coupling constants kj are strongly dependent on frequency. Using different processes for the generation of the coupling sequence {kj} we observe two regimes: a regular one, where the localization length ξ is roughly proportional to the correlation length l of {kj}, and an anomalous one, in which there is not a proportionality relation and where one can have non intuitive behaviors, e.g. ξ does not increase for increasing l.},
-  doi       = {10.1142/s0217984995000875},
-  owner     = {paolo},
-  publisher = {World Scientific Pub Co Pte Lt},
-  ranking   = {Localization lengths in harmonic chains with correlated disorder},
+  author           = {Paolo Muratore-Ginanneschi and Alberto Petri and Angelo Vulpiani},
+  journal          = {Modern Physics Letters},
+  title            = {{Localization lengths in harmonic chains with correlated disorder}},
+  year             = {1995},
+  abbr             = {Mod. Phys. Lett.},
+  month            = {jun},
+  number           = {15},
+  pages            = {921--928},
+  volume           = {09},
+  abstract         = {We show that the localization properties of harmonic chains with correlated random coupling constants kj are strongly dependent on frequency. Using different processes for the generation of the coupling sequence {kj} we observe two regimes: a regular one, where the localization length ξ is roughly proportional to the correlation length l of {kj}, and an anomalous one, in which there is not a proportionality relation and where one can have non intuitive behaviors, e.g. ξ does not increase for increasing l.},
+  doi              = {10.1142/s0217984995000875},
+  modificationdate = {2025-10-01T02:52:44},
+  owner            = {paolo},
+  publisher        = {World Scientific Pub Co Pte Lt},
+  ranking          = {Localization lengths in harmonic chains with correlated disorder},
 }
 
 @Article{FaMaBeMaMGVu1995,
-  author    = {Falcioni, Massimo and Marini Bettolo Marconi, Umberto and Muratore-Ginanneschi, Paolo and Vulpiani, Angelo},
-  journal   = {Physical Review Letters},
-  title     = {{Complexity of the Minimum Energy Configurations}},
-  year      = {1995},
-  abbr      = {Phys. Rev. Lett.},
-  month     = {jul},
-  number    = {4},
-  pages     = {637--640},
-  volume    = {75},
-  abstract  = {We introduce a method of characterizing the complexity of the minima of a given function, of N variables, by means of the entropy, S(N), of a measure selected as follows: One chooses an algorithm which computes the minima, and assigns to a single minimum a probability equal to the (relative) measure of its basin of attraction. The behavior of S(N), for large N, gives a well defined entropy density σ for the minima, with respect to the chosen minima-generating law. σ characterizes the complexity of the minima in a rather natural way in the framework of information theory, i.e., the number of bits one uses to transmit one (typical) minimum configuration is ≃Nσ/ln2.},
-  doi       = {10.1103/physrevlett.75.637},
-  owner     = {paolo},
-  publisher = {American Physical Society ({APS})},
-  ranking   = {Complexity of the Minimum Energy Configurations},
-  url       = {https://doi.org/10.1103%2Fphysrevlett.75.637},
+  author           = {Falcioni, Massimo and Marini Bettolo Marconi, Umberto and Muratore-Ginanneschi, Paolo and Vulpiani, Angelo},
+  journal          = {Physical Review Letters},
+  title            = {{Complexity of the Minimum Energy Configurations}},
+  year             = {1995},
+  abbr             = {Phys. Rev. Lett.},
+  month            = {jul},
+  number           = {4},
+  pages            = {637--640},
+  volume           = {75},
+  abstract         = {We introduce a method of characterizing the complexity of the minima of a given function, of N variables, by means of the entropy, S(N), of a measure selected as follows: One chooses an algorithm which computes the minima, and assigns to a single minimum a probability equal to the (relative) measure of its basin of attraction. The behavior of S(N), for large N, gives a well defined entropy density σ for the minima, with respect to the chosen minima-generating law. σ characterizes the complexity of the minima in a rather natural way in the framework of information theory, i.e., the number of bits one uses to transmit one (typical) minimum configuration is ≃Nσ/ln2.},
+  doi              = {10.1103/physrevlett.75.637},
+  modificationdate = {2025-10-01T03:01:13},
+  owner            = {paolo},
+  publisher        = {American Physical Society ({APS})},
+  ranking          = {Complexity of the Minimum Energy Configurations},
+  url              = {https://doi.org/10.1103%2Fphysrevlett.75.637},
 }
 
 @Article{KuMGPeSc2016,
@@ -1061,25 +1063,26 @@
 }
 
 @Article{DoMG2023,
-  author      = {Donvil, Brecht I. C. and Muratore-Ginanneschi, Paolo},
-  journal     = {Open Systems & Information Dynamics},
-  title       = {{On the unraveling of open quantum dynamics}},
-  year        = {2023},
-  abbr        = {OSID},
-  month       = nov,
-  number      = {3},
-  pages       = {2350015},
-  volume      = {30},
-  abstract    = {It is well known that the state operator of an open quantum system can be generically represented as the solution of a time-local equation -- a quantum master equation. Unraveling in quantum trajectories offers a picture of open system dynamics dual to solving master equations. In the unraveling picture, physical indicators are computed as Monte-Carlo averages over a stochastic process valued in the Hilbert space of the system. This approach is particularly adapted to simulate systems in large Hilbert spaces. %Drawing from our recent [Nat Commun 13, 4140 (2022)]. We show that the dynamics of an open quantum system generically admits an unraveling in the Hilbert space of the system described by a Markov process generated by ordinary stochastic differential equations for which rigorous concentration estimates are available. The unraveling can be equivalently formulated in terms of norm-preserving state vectors or in terms of linear \textquotedblleft ostensible\textquotedblright\ processes trace preserving only on average. We illustrate the results in the case of a two level system in a simple boson environment. Next, we derive the state-of-the-art form of the Di\'osi-Gisin-Strunz Gaussian random ostensible state equation in the context of a model problem. This equation provides an exact unraveling of open systems in Gaussian environments. We compare and contrast the two unravelings and their potential for applications to quantum error mitigation.},
-  copyright   = {arXiv.org perpetual, non-exclusive license},
-  date        = {2023-09-23},
-  doi         = {10.1142/S1230161223500154},
-  eprint      = {2309.13408},
-  eprintclass = {quant-ph},
-  eprinttype  = {arXiv},
-  owner       = {paolo},
-  publisher   = {World Scientific},
-  ranking     = {{On the unraveling of open quantum dynamics}},
+  author           = {Donvil, Brecht I. C. and Muratore-Ginanneschi, Paolo},
+  journal          = {Open Systems \& Information Dynamics},
+  title            = {{On the unraveling of open quantum dynamics}},
+  year             = {2023},
+  abbr             = {OSID},
+  month            = nov,
+  number           = {3},
+  pages            = {2350015},
+  volume           = {30},
+  abstract         = {It is well known that the state operator of an open quantum system can be generically represented as the solution of a time-local equation -- a quantum master equation. Unraveling in quantum trajectories offers a picture of open system dynamics dual to solving master equations. In the unraveling picture, physical indicators are computed as Monte-Carlo averages over a stochastic process valued in the Hilbert space of the system. This approach is particularly adapted to simulate systems in large Hilbert spaces. %Drawing from our recent [Nat Commun 13, 4140 (2022)]. We show that the dynamics of an open quantum system generically admits an unraveling in the Hilbert space of the system described by a Markov process generated by ordinary stochastic differential equations for which rigorous concentration estimates are available. The unraveling can be equivalently formulated in terms of norm-preserving state vectors or in terms of linear \textquotedblleft ostensible\textquotedblright\ processes trace preserving only on average. We illustrate the results in the case of a two level system in a simple boson environment. Next, we derive the state-of-the-art form of the Di\'osi-Gisin-Strunz Gaussian random ostensible state equation in the context of a model problem. This equation provides an exact unraveling of open systems in Gaussian environments. We compare and contrast the two unravelings and their potential for applications to quantum error mitigation.},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  date             = {2023-09-23},
+  doi              = {10.1142/S1230161223500154},
+  eprint           = {2309.13408},
+  eprintclass      = {quant-ph},
+  eprinttype       = {arXiv},
+  modificationdate = {2025-10-01T02:51:04},
+  owner            = {paolo},
+  publisher        = {World Scientific},
+  ranking          = {{On the unraveling of open quantum dynamics}},
 }
 
 @Article{SaBaMG2024,
@@ -1273,6 +1276,27 @@
   primaryclass     = {cond-mat.supr-con},
   ranking          = {{Quantum and classical Shapiro steps in small Josephson junctions}},
   url              = {https://doi.org/10.48550/arXiv.2508.04574},
+}
+
+@Article{SaMG2025b,
+  author           = {Sanders, Julia and Muratore-Ginanneschi, Paolo},
+  journal          = {Eprint},
+  title            = {{Optimal Control of Engineered Swift Equilibration of Nanomechanical Oscillators}},
+  year             = {2025},
+  abbr             = {Eprint},
+  month            = oct,
+  abstract         = {We propose a reformulation of the problem of optimally controlled transitions in stochastic thermodynamics. We impose that any terminal cost specified by a thermodynamic functional should depend only on state variables and not on control protocols, according to the canonical Bolza form. In this way, we can unambiguously discriminate between transitions at minimum dissipation between genuine equilibrium states, and transitions at minimum work driving a system from a genuine equilibrium to a non-equilibrium state. For underdamped dynamics subject to a mechanical force, genuine equilibrium means a Maxwell-Boltzmann probability distribution defining a vanishing current velocity. Transitions at minimum dissipation between equilibria are a model of optimal swift engineered equilibration. Remarkably, we show that transitions at minimum work do not directly imply explicit boundary conditions on terminal values of parameters of the mechanical force and on control protocols. Thus, the problem often discussed in the literature, that optimal protocols need terminal jumps to satisfy boundary conditions, completely disappears. The quantitative properties of optimal controls are entirely determined by the form of the penalty modelling an experimental setup. More generally, we use centre manifold theory to analytically account for the tendency of optimal controls to exhibit a turnpike property: optimal protocols in the bulk of the control horizon tend to converge to a universal centre manifold determined only by the running cost. Exponential deviations from the centre manifold occur at the ends of the control horizon in order to satisfy the boundary conditions. Our findings are supported numerically.},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  creationdate     = {2025-10-03T10:56:09},
+  date             = {2025-10-02},
+  doi              = {10.48550/ARXIV.2510.01823},
+  eprint           = {2510.01823},
+  eprintclass      = {cond-mat.stat-mech},
+  eprinttype       = {arXiv},
+  modificationdate = {2025-10-03T11:01:23},
+  owner            = {paolo},
+  publisher        = {arXiv},
+  ranking          = {{Optimal Control of Engineered Swift Equilibration of Nanomechanical Oscillators}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
