--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1280,7 +1280,7 @@
 
 @Article{SaMG2025b,
   author           = {Sanders, Julia and Muratore-Ginanneschi, Paolo},
-  journal          = {Eprint},
+  journal          = {Eprint arXiv:2510.01823},
   title            = {{Optimal Control of Engineered Swift Equilibration of Nanomechanical Oscillators}},
   year             = {2025},
   abbr             = {Eprint},
@@ -1293,7 +1293,7 @@
   eprint           = {2510.01823},
   eprintclass      = {cond-mat.stat-mech},
   eprinttype       = {arXiv},
-  modificationdate = {2025-10-03T11:01:23},
+  modificationdate = {2025-10-03T12:20:17},
   owner            = {paolo},
   publisher        = {arXiv},
   ranking          = {{Optimal Control of Engineered Swift Equilibration of Nanomechanical Oscillators}},
