--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1258,7 +1258,7 @@
   url              = {https://doi.org/10.48550/arXiv.2506.02145},
 }
 
-@Article{Resch2025,
+@Article{ReAnDoMGGo2025,
   author           = {Resch, Miriam and Ankerhold, Joachim and Donvil, Brecht I. C. and Muratore-Ginanneschi, Paolo and Golubev, Dmitry},
   journal          = {Eprint arXiv:2508.04574},
   title            = {{Quantum and classical Shapiro steps in small Josephson junctions}},
@@ -1271,7 +1271,7 @@
   creationdate     = {2025-08-07T13:33:30},
   doi              = {10.48550/ARXIV.2508.04574},
   eprint           = {2508.04574},
-  modificationdate = {2025-08-07T13:37:31},
+  modificationdate = {2025-10-23T10:24:52},
   owner            = {paolo},
   primaryclass     = {cond-mat.supr-con},
   ranking          = {{Quantum and classical Shapiro steps in small Josephson junctions}},
@@ -1297,6 +1297,28 @@
   owner            = {paolo},
   publisher        = {arXiv},
   ranking          = {{Optimal Control of Engineered Swift Equilibration of Nanomechanical Oscillators}},
+}
+
+@Article{MGKivEnCh2025,
+  author           = {Muratore-Ginanneschi, Paolo and Kimura, Gen and Ende, Frederik vom and Chruściński, Dariusz},
+  journal          = {Eprint},
+  title            = {{Universal bound on the Lyapunov spectrum of quantum master equations}},
+  year             = {2025},
+  abbr             = {Eprint},
+  month            = {10},
+  abstract         = {The spectral properties of positive maps provide pivotal information for understanding the dynamics of quantum systems interacting with their environment. Furthermore, central problems in quantum information such as the characterization of entanglement may be reformulated in terms of spectral properties of positive maps. The present work aims to contribute to a better understanding of the spectrum of positive maps. Specifically, our main result is a new proof of a universal bound on the $d^{2}-1$ generically non vanishing decay rates $\Gamma_{i}$ of time-autonomous quantum master equations on a $d$-dimensional Hilbert space: $$ \Gamma_{\mathrm{max}}\,\leq\,c_{d}\,\sum_{i=1}^{d^{2}-1}\Gamma_{i} \nonumber $$ The prefactor $c_{d}$ , which we explicitly determine, depends only on the dimension $d$ and varies depending on the sub-class of positive maps to which the semigroup solution of the master equation belongs. We provide a brief but self-consistent survey of these concepts. We obtain our main result by resorting to the theory of Lyapunov exponents, a central concept in the study of dynamical systems, control theory, and out-of-equilibrium statistical mechanics. We thus show that progress in understanding positive maps in quantum mechanics may require ideas at the crossroads between different disciplines. For this reason, we adopt a notation and presentation style aimed at reaching readers with diverse backgrounds.},
+  archiveprefix    = {arXiv},
+  copyright        = {arXiv.org perpetual, non-exclusive license},
+  creationdate     = {2025-10-23T10:17:37},
+  date             = {2025-10-22},
+  doi              = {10.48550/arxiv.2510.19657},
+  eprint           = {2510.19657},
+  eprintclass      = {quant-ph},
+  eprinttype       = {arXiv},
+  modificationdate = {2025-10-23T10:23:28},
+  owner            = {paolo},
+  ranking          = {{Universal bound on the Lyapunov spectrum of quantum master equations}},
+  url              = {https://doi.org/10.48550/arxiv.2510.19657},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
