--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1238,24 +1238,27 @@
   url              = {https://doi.org/10.1088/1361-6633/ae075f},
 }
 
-@Article{vEnChKiMG2025,
+@Article{vEnChKiMG2026,
   author           = {{vom Ende}, Frederik and Chruściński, Dariusz and Kimura, Gen and Muratore-Ginanneschi, Paolo},
-  journal          = {Eprint arXiv:2506.02145},
+  journal          = {Linear Algebra and its Applications},
   title            = {{Universal Bound on the Eigenvalues of 2-Positive Trace-Preserving Maps}},
-  year             = {2025},
-  abbr             = {Eprint},
-  month            = jun,
+  year             = {2026},
+  abbr             = {LAA},
+  month            = feb,
+  number           = {1},
+  pages            = {262--275},
+  volume           = {730},
   abstract         = {We prove an upper bound on the trace of any 2-positive, trace-preserving map in terms of its smallest eigenvalue. We show that this spectral bound is tight, and that 2-positivity is necessary for this inequality to hold in general. Moreover, we use this to infer a similar bound for generators of one-parameter semigroups of 2-positive trace-preserving maps. With this approach we generalize known results for completely positive trace-preserving dynamics while providing a significantly simpler proof that is entirely algebraic.},
   archiveprefix    = {arXiv},
   copyright        = {arXiv.org perpetual, non-exclusive license},
   creationdate     = {2025-06-04T10:49:21},
-  doi              = {10.48550/ARXIV.2506.02145},
+  doi              = {10.1016/j.laa.2025.10.022},
   eprint           = {2506.02145},
-  modificationdate = {2025-06-04T10:51:51},
+  modificationdate = {2025-10-27T20:38:49},
   owner            = {paolo},
   primaryclass     = {math.RA},
   ranking          = {{Universal Bound on the Eigenvalues of 2-Positive Trace-Preserving Maps}},
-  url              = {https://doi.org/10.48550/arXiv.2506.02145},
+  url              = {https://doi.org/10.1016/j.laa.2025.10.022},
 }
 
 @Article{ReAnDoMGGo2025,
@@ -1301,7 +1304,7 @@
 
 @Article{MGKivEnCh2025,
   author           = {Muratore-Ginanneschi, Paolo and Kimura, Gen and Ende, Frederik vom and Chruściński, Dariusz},
-  journal          = {Eprint},
+  journal          = {Eprint arXiv:2510.19657},
   title            = {{Universal bound on the Lyapunov spectrum of quantum master equations}},
   year             = {2025},
   abbr             = {Eprint},
@@ -1315,7 +1318,7 @@
   eprint           = {2510.19657},
   eprintclass      = {quant-ph},
   eprinttype       = {arXiv},
-  modificationdate = {2025-10-23T10:23:28},
+  modificationdate = {2025-10-27T15:46:13},
   owner            = {paolo},
   ranking          = {{Universal bound on the Lyapunov spectrum of quantum master equations}},
   url              = {https://doi.org/10.48550/arxiv.2510.19657},
