--- a/_bibliography/muratore-ginanneschi.bib
+++ b/_bibliography/muratore-ginanneschi.bib
@@ -1324,4 +1324,24 @@
   url              = {https://doi.org/10.48550/arxiv.2510.19657},
 }
 
+@Article{VaCaMGPe2026,
+  author           = {Antti Vaaranta and Marco Cattaneo and Paolo Muratore-Ginanneschi and Jukka Pekola},
+  journal          = {Eprint arXiv:2602.19908},
+  title            = {{Heat flow through the quantum heat valve coupled to ohmic baths via a master equation approach}},
+  year             = {2026},
+  abbr             = {Eprint},
+  month            = feb,
+  abstract         = {We provide a theoretical model for the non-equilibrium steady state heat flow through a quantum heat valve. The model is based on a master equation approach, where the partial secular approximation has been carefully performed in order to obtain accurate results. Our study assumes an ohmic spectral density for the two thermal baths of the model. This is in contrast with previous treatments of the quantum heat valve, where the baths have been assumed as being structured with a peaked spectral density near the resonance frequency of the resonator. These studies have also taken the resonator to be a part of the open quantum system of interest, which results in double counting of the resonator, as the latter appears both in the spectral density of the bath and as a part of the open system. Although this model accounts for the observations in a satisfactory way, it raises issues regarding its physical interpretation. Our method solves this conceptual problem. We apply it to describe an experiment on a quantum heat valve, showing that it successfully captures the experimental results and improves upon the previous theoretical model, which suffered from the resonator double-counting issue. Our findings confirm that the careful application of the master equation approach, in particular when it comes to the secular approximation, is a useful tool for explaining realistic experimental setups.},
+  creationdate     = {2026-02-24T13:47:39},
+  date             = {2026-02-23},
+  doi              = {10.48550/arXiv.2602.19908},
+  eprint           = {2602.19908},
+  eprintclass      = {quant-ph},
+  eprinttype       = {arXiv},
+  modificationdate = {2026-02-24T13:51:48},
+  owner            = {paolo},
+  ranking          = {{Heat flow through the quantum heat valve coupled to ohmic baths via a master equation approach}},
+  url              = {https://doi.org/10.48550/arXiv.2602.19908},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
